sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code

def tri(){
	for(i<- 0 to 8){		
		var j:Int = i+1
		if(!plusPetit(i,j)){
			echange(i,j)
			}
	
		
	}
}

def bubbleSort()  {

for(i<- 0 to 8){
	var j : Int=i+1
	var test : Boolean=false
	if(plusPetit(i,j)){
		test = true
	}
	else{
		test= false
	}
}

while(test==false){
	tri()
}

}
